# SHawn-BIO

./: .cursorrules  .env.example  .gitignore  GEMINI.md  IMPROVEMENT_BACKLOG.md  LICENSE  PROJECT.md  PROJECT_MAP.md  README.md  SKILL.md  SYSTEM_MANIFEST.md  SYSTEM_PROFILE.json  bio_cartridge.py  manifest.yaml  project.json  pyproject.toml  requirements.txt  research_engine.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci-uv.yml  secret-scan.yml
01-Analysis/: research_engine.py
agents/: openai.yaml
references/: dataset-search.md  evidence-schema.md  global-coverage.md  source-integration.md
tools/: __init__.py  nli.py  research_engine.py  sbi_pipeline.py  shawn_bio_search_cli.py  verify_brain.py  web_bio_search.py
